CRUD supplier, add test and swaager
