# config/routes.rb
@@ -3,7 +3,7 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       post 'login', to: 'sessions#create'
-      resources :suppliers, only: %i[index]
+      resources :suppliers, only: %i[index show create update]
     end
   end
 end
